--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -26,5 +26,6 @@ jobs:
     - uses: actions/checkout@v4
     - uses: mozilla-actions/sccache-action@v0.0.3
     - uses: dtolnay/rust-toolchain@stable
+    - run: sudo apt-get -y install valgrind
 
     - run: cargo bench -p remove-query-string --bench benchmark_by_cycle
