--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -20,12 +20,30 @@ env:
 
 jobs:
 
-  benchmark:
+  iai:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: mozilla-actions/sccache-action@v0.0.3
     - uses: dtolnay/rust-toolchain@stable
+
     - run: sudo apt-get -y install valgrind
 
-    - run: cargo bench -p remove-query-string --bench benchmark_by_cycle
+    - run: cargo bench -p remove-query-string --bench benchmark_by_cachegrind
+
+  iai-callgrind:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: mozilla-actions/sccache-action@v0.0.3
+    - uses: dtolnay/rust-toolchain@stable
+    - name: Cache Cargo dependencies
+      uses: Swatinem/rust-cache@v2
+
+    - run: sudo apt-get -y install valgrind
+
+    - name: Install iai-callgrind-runner
+      # https://github.com/iai-callgrind/iai-callgrind#installation
+      run: cargo install iai-callgrind-runner --locked
+
+    - run: cargo bench -p remove-query-string --bench benchmark_by_callgrind
