--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/koyeung/try-rs-benches/"
 [workspace.dependencies]
 criterion = "0.5.1"
 iai = "0.1.1"
+iai-callgrind = "0.9.0"
 
 [profile.release]
 opt-level = 3
