--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -15,8 +15,8 @@ env:
   RUSTFLAGS: -Dwarnings
 
   # setup sccache for Rust; see https://github.com/Mozilla-Actions/sccache-action
-  SCCACHE_GHA_ENABLED: "true"
-  RUSTC_WRAPPER: "sccache"
+  # SCCACHE_GHA_ENABLED: "true"
+  # RUSTC_WRAPPER: "sccache"
 
 jobs:
 
@@ -35,10 +35,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: mozilla-actions/sccache-action@v0.0.3
+    # - uses: mozilla-actions/sccache-action@v0.0.3
     - uses: dtolnay/rust-toolchain@stable
-    - name: Cache Cargo dependencies
-      uses: Swatinem/rust-cache@v2
+    # - name: Cache Cargo dependencies
+      # uses: Swatinem/rust-cache@v2
 
     - run: sudo apt-get -y install valgrind
 
