--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -49,6 +49,6 @@ jobs:
           jq '.packages[] | select(.name == "iai-callgrind").version' |\
           tr -d '"'
         )
-        cargo install iai-callgrind-runner --version $version
+        cargo install iai-callgrind-runner --version $version --locked
 
     - run: cargo bench -p remove-query-string --bench benchmark_by_callgrind
