--- a/.github/workflows/cargo-vet.yml
+++ b/.github/workflows/cargo-vet.yml
@@ -1,5 +1,11 @@
 name: cargo-vet
-on: [push, pull_request]
+# run only manually, otherwise, it fails on each version bump
+on: workflow_dispatch
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   cargo-vet:
     name: Vet Dependencies
@@ -7,7 +13,7 @@ jobs:
     env:
       CARGO_VET_VERSION: 0.9.1
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v4
     - name: Install Rust
       run: rustup update stable && rustup default stable
     - uses: actions/cache@v4
