--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,20 @@ iai-callgrind = "0.11.0"
 codegen-units = 1
 lto = true
 panic = "abort"
-strip = true
+strip = "none"
 
 [profile.bench]
 # https://doc.rust-lang.org/cargo/reference/profiles.html#bench
+codegen-units = 1
+# debugging symbols are required for iai-callgrind
 debug = true
+incremental = false
+inherits = "release"
+lto = true
+opt-level = 3
+panic = "abort"
 # don't strip, otherwise, unable to do iai-callgrind
 strip = "none"
+
+[profile.dev]
+debug = 0
