--- a/.github/workflows/audit-check.yml
+++ b/.github/workflows/audit-check.yml
@@ -6,11 +6,13 @@ on:
       - '**/Cargo.lock'
       - '**/Cargo.toml'
       - ".github/workflows/audit-check.yml"
+      - 'deny.toml'
   pull_request:
     paths:
       - '**/Cargo.lock'
       - '**/Cargo.toml'
       - ".github/workflows/audit-check.yml"
+      - 'deny.toml'
 
 env:
   CARGO_TERM_COLOR: always
@@ -29,7 +31,7 @@ jobs:
     continue-on-error: ${{ matrix.checks == 'advisories' }}
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: EmbarkStudios/cargo-deny-action@v1
-      with:
-        command: check ${{ matrix.checks }}
+      - uses: actions/checkout@v4
+      - uses: EmbarkStudios/cargo-deny-action@v2
+        with:
+          command: check ${{ matrix.checks }}
