--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/koyeung/try-rs-benches/"
 [workspace.dependencies]
 criterion = "0.8.1"
 iai = "0.1.1"
-iai-callgrind = "0.16.1"
+gungraun = "0.17.0"
 
 [profile.release]
 # https://doc.rust-lang.org/cargo/reference/profiles.html#release
