--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -14,6 +14,7 @@ env:
   RUSTC_WRAPPER: "sccache"
 jobs:
   iai:
+    if: false # iai is always failed
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
