--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
       - name: Restore lychee cache
         uses: actions/cache@v5
         with:
           path: .lycheecache
           key: cache-lychee-${{ github.sha }}
           restore-keys: cache-lychee-
-      - uses: lycheeverse/lychee-action@v2
+      - uses: lycheeverse/lychee-action@a8c4c7cb88f0c7386610c35eb25108e448569cb0 # v2.7.0
         with:
           args: "--cache --max-cache-age 1d . -v *.md"
           failIfEmpty: false
@@ -31,6 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "${{ github.workflow }}"
@@ -40,7 +44,7 @@ jobs:
           components: rustfmt, clippy
       - run: cargo verify-project
       - name: Detect unused dependencies
-        uses: bnjbvr/cargo-machete@v0.9.1
+        uses: bnjbvr/cargo-machete@7959c845782fed02ee69303126d4a12d64f1db18 # v0.9.1
       - run: cargo fmt --check --all
       - run: cargo clippy --workspace -- -D warnings
       - run: cargo check --workspace --future-incompat-report
@@ -50,6 +54,8 @@ jobs:
     needs: check
     steps:
       - uses: actions/checkout@v6
+        with:
+          persist-credentials: false
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "${{ github.workflow }}"
